--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="main-container">
             <section class="section-main">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="header-btn" type="button" >
+                <button class="header-btn" type="button" data-modal-open >
                 Заказать услугу
                 </button>
             </section>
