--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <li class="social-networks-item">
                     <a href="" class="social-networks-link">
                         <svg class="social-networks-icon">
-                            <use href="./images/icons.svg#twitter">
+                            <use href="./images/icons.svg#linkedin">
                                 <use>
                         </svg>
                     </a>
@@ -196,7 +196,7 @@
                         <li class="social-networks-item">
                             <a href="" class="social-networks-link">
                                 <svg class="social-networks-icon">
-                                    <use href="./images/icons.svg#twitter">
+                                    <use href="./images/icons.svg#linkedin">
                                         <use>
                                 </svg>
                             </a>
@@ -235,7 +235,7 @@
                         <li class="social-networks-item">
                             <a href="" class="social-networks-link">
                                 <svg class="social-networks-icon">
-                                    <use href="./images/icons.svg#twitter">
+                                    <use href="./images/icons.svg#linkedin">
                                         <use>
                                 </svg>
                             </a>
@@ -274,7 +274,7 @@
                         <li class="social-networks-item">
                             <a href="" class="social-networks-link">
                                 <svg class="social-networks-icon">
-                                    <use href="./images/icons.svg#twitter">
+                                    <use href="./images/icons.svg#linkedin">
                                         <use>
                                 </svg>
                             </a>
@@ -389,7 +389,7 @@
                 <li class="social-item">
                     <a href="" class="social-link">
                         <svg class="social-networks-icon">
-                            <use href="./images/icons.svg#twitter">
+                            <use href="./images/icons.svg#linkedin">
                                 <use>
                         </svg>
                     </a>
@@ -402,7 +402,7 @@
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="modal-close-icon" width=11px height=11px>
-                    <use href="./images/symbol-defs.svg#icon-close"></use>
+                    <use href="./images/icons.svg#close-modal"></use>
                 </svg>
             </button>
         </div>
