--- a/portfolio.html
+++ b/portfolio.html
@@ -264,7 +264,7 @@
                     <li class="social-item">
                         <a href="" class="social-link">
                             <svg class="social-networks-icon">
-                                <use href="./images/icons.svg#twitter">
+                                <use href="./images/icons.svg#linkedin">
                                     <use>
                             </svg>
                         </a>
