--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
             </div>
     
             <div class="footer-social">
-                <h3 class="footer-social-title container">ПРИСОЕДЕНЯЙТЕСЬ</h3>
+                <h3 class="footer-social-title">ПРИСОЕДЕНЯЙТЕСЬ</h3>
                 <ul class="social-list list">
                     <!-- instagram -->
                     <li class="social-item">
